--- a/source/training/ex362.rst
+++ b/source/training/ex362.rst
@@ -4,6 +4,10 @@
 
 EX362 Exam Prep
 ^^^^^^^^^^^^^^^
+
+Original author: nazunalika
+
+Last modified: Wed Aug 17 00:26
 .. meta::
        :description: Materials to prepare for the Red Hat Certified Specialist in Identity Management exam.
 
