fix notes in training

--- a/docs/training/ex362.md
+++ b/docs/training/ex362.md
@@ -6,9 +6,7 @@ This page contains the necessary resources to help you prepare for the Red Hat C
 
 The list of objectives can be found [here](https://www.redhat.com/en/services/training/ex362-red-hat-certified-specialist-identity-management-exam). Note that the exam objectives can change at any time. It is the responsibility of the reader to always review the objectives prior to studying and taking the exam to ensure success.
 
-!!! note
-    Affiliation and Exam Information
-
+!!! note "Affiliation and Exam Information"
     Please note that we are not affiliated with Red Hat. The materials and examples used are our own and do not reflect the training programs provided by Red Hat and are educational only. We do not disclose any of the tasks, questions, or material on the exam as it would violate the NDA. Any questions sent to us about anything directly related to the exam will not be answered. We also do not provide any one-on-one tutoring or online teaching courses.
 
     If exam objectives have changed to where the videos and this material are missing information, we can add on at any time upon request. If exam objectives have not changed but operational tasks have, we will note them as we find them. If there are things about FreeIPA that you'd like to see in the videos that may fit into objective, we can add it also upon request. However, it is likely those extra things would be better suited in the separate FreeIPA section on this site.
@@ -54,7 +52,7 @@ View the resources above in the previous section for directory server tuning inf
 | idm1.example.com        | 192.168.15.2  |
 | idm2.example.com        | 192.168.15.3  |
 
-!!! note::
+!!! note "Static Addresses"
     IPA Servers should either have a DHCP reservation or a static address. In the event that you have either, DNS should always be pointing at 127.0.0.1, especially if your replica serves DNS. Both of our replicas serve DNS, so loopback is sufficient and recommended for our name server.
 
     In later versions of FreeIPA, there is support to force network manager to ensure resolv.conf is loopback without the need to set it by hand with nmcli.
@@ -146,16 +144,12 @@ View the resources above in the previous section for directory server tuning inf
 |                         | Netgroups administrators  |
 |                         | Host enrollment           |
 
-!!! note
-    Custom UID/GID
-  
+!!! note "Custom UID/GID"
     It is possible to create the users with a custom uid/gid with the switches --uid and --gidnumber which you will see below. It is also possible to set random passwords with --random.
 
     See ipa user-add --help for more switches.
 
-!!! note
-    Password Expiration
-
+!!! note "Password Expiration"
     When you make a user with the --password switch or use ipa passwd to set a password, it is automatically expired and must be changed on next login. If you want to avoid this from happening, you will need to set a random password via --password or --random, and then use kpasswd username to change it to the desired password. This does not make the account non-expiring.
 
 ```
@@ -449,9 +443,7 @@ Below are some examples of adding access.
 
 You will need to configure your NFS server to serve up roaming home directories for users and then your client should have automouting enabled.
 
-!!! note
-    Client Kerberos Service
-
+!!! note "Client Kerberos Service"
     It may not be required to create an nfs kerberos service for the client. The ipa-client-automount command may already handle this but it does not hurt to create one. In fact, the host keytab is used on the client side anyway. Creating an NFS client keytab may have been required back in the EL6 days.
 
 ```
@@ -569,18 +561,14 @@ When this account is created, you can then specify the full DN for that object i
 
 If you'd like an example of setting up Ansible Tower (or AWX, the open source version of tower) against IdM, you can click [here](https://github.com/ansible/awx/blob/devel/docs/auth/ldap.md).
 
-!!! note
-    Kerberos
-
+!!! note "Kerberos"
     On some applications, it is possible to use kerberos authentication rather than a straight bind account. The general idea is the same when picking out the base dn, attributes, and the like. However, instead you would create an account with an accompanying LDAP/... service principal to do the authentication.
 
 ## Creating Trust with AD Domain
 
 ### Create trust relationships with Active Directory
 
-!!! note
-    AD Setup
-
+!!! note "AD Setup"
     We do not cover setting up an AD forest here. This is out of scope for this series. If you are using Server 2016 or higher and you are using "core", look up the commands:
 
     Install-WindowsFeature AD-domain-services
@@ -756,9 +744,7 @@ As we've made an HBAC rule before, this should be simple.
 
 The test should pass without any issues.
 
-!!! note
-    Group Types
-
+!!! note "Group Types"
     While this may not be required information while working on the exam, it's important to understand that there are different group types in AD and the behavior changes based on the group type.
 
     Groups in Active Directory have three types. These three types can actually change the behavior of how SSSD on the IPA domain controllers resolve them or if they'll even be resolvable at all. The three types are 'Domain Local', 'Global', and 'Universal'. If at all possible, avoid groups being 'Global'. Domain Local or Universal is recommended.
